# vibeflow

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.base.json
docs/: ai-editing-playbook.md  example-zips.md  import-testing-checklist.md  next-steps.md  power-automate-connector-definition-research.md  power-automate-style-guide.md
examples/example1/: manifest.json
examples/example1/Microsoft.Flow/flows/: manifest.json
examples/example1/Microsoft.Flow/flows/fb36e059-b3eb-4443-aa1c-d998ee1c2af2/: apisMap.json  connectionsMap.json  definition.json
examples/example2/Microsoft.Flow/flows/: manifest.json
examples/example2/Microsoft.Flow/flows/385bc524-448e-4368-a6d0-c6fc9d20e374/: apisMap.json  connectionsMap.json  definition.json
tests/: test_vibeflow.py
tools/: collect_connector_definitions.py  generate-example-zips.ts  provision-sharepoint-list.ts
vibeflow/: __init__.py  aliases.py  cli.py  context.py  index.py  linting.py  package.py  rewrite.py  utils.py
