[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeflow"
version = "0.1.0"
description = "Power Automate export inspection, linting, AI context, and safe rewrite tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vibeflow" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
vibeflow = "vibeflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
